--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,3 +2,15 @@
 /*  @ Import/write your custom styles here.
 /*  @ Styles from this file will override 'vendors.scss' and Fuse's base styles.
 /* ----------------------------------------------------------------------------------------------------- */
+body.light .mat-flat-button.mat-primary, body.light .mat-raised-button.mat-primary, body.light .mat-fab.mat-primary, body.light .mat-mini-fab.mat-primary, body .light .mat-flat-button.mat-primary, body .light .mat-raised-button.mat-primary, body .light .mat-fab.mat-primary, body .light .mat-mini-fab.mat-primary {
+    background-color: #ECBD00;
+}
+
+.table-header-background{
+    background-color: #01671B;
+    color: white;
+}
+
+.cdk-overlay-pane{
+    overflow-y: scroll;
+}
