--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,3 +14,26 @@ body.light .mat-flat-button.mat-primary, body.light .mat-raised-button.mat-prima
 .cdk-overlay-pane{
     overflow-y: scroll;
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 32px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #01671B; 
+    border-radius: 32px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #01671B; 
+  }
