--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -1,10 +1,10 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+<div class=" px-6 pt-2 container overflow-scroll sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0  bg-card dark:bg-transparent">
     <div class="text-4xl font-extrabold tracking-tight">List Geo Fencing</div>
 
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b"
+    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-2  border-b"
          style="flex-wrap: wrap" [formGroup]="listForm">
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
                 <mat-label class="customMatLabel">PP No.</mat-label>
@@ -12,7 +12,7 @@
                        autocomplete="off"/>
             </mat-form-field>
         </div>
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
             <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">
                 <mat-label class="customMatLabel">Zone</mat-label>
@@ -36,7 +36,7 @@
 
         </div>
 
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
                 <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
@@ -58,7 +58,7 @@
             </mat-form-field>
         </div>
 
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
                 <mat-label class="customMatLabel">Circle</mat-label>
@@ -72,7 +72,7 @@
             </mat-form-field>
         </div>
 
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
                 <mat-label>Choose start date</mat-label>
@@ -92,7 +92,7 @@
             </mat-form-field>
         </div>
 
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4"
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0"
         >
 
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
@@ -111,7 +111,7 @@
                 </mat-error>
             </mat-form-field>
         </div>
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
             <button mat-raised-button color="accent"
                     type="button" (click)="find()">
@@ -121,14 +121,7 @@
         </div>
 
     </div>
-    <div class="flex flex-auto overflow-hidden" style="flex-direction: column;">
-        <div class="example-container mat-elevation-z8">
-            <div class="example-loading-shade"
-                 *ngIf="loaded">
-                <mat-spinner *ngIf="!loaded"></mat-spinner>
-            </div>
-        </div>
-
+    <div class="flex flex-auto" style="flex-direction: column;">
         <div class="example-table-container">
 
             <table mat-table
