--- a/src/app/modules/user-management/users/circle-list/circle-list.component.html
+++ b/src/app/modules/user-management/users/circle-list/circle-list.component.html
@@ -1,4 +1,4 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
 
   <!-- Header -->
   <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b">
@@ -31,11 +31,11 @@
   </div>
 
   <!-- Main -->
-  <div class="flex flex-auto overflow-hidden">
+  <div class="flex flex-auto overflow-scroll">
 
     <!-- Products list -->
-    <div class="flex flex-auto overflow-hidden" style="flex-direction: column;">
-      <div class="flex flex-col flex-auto sm:mb-18 overflow-hidden sm:overflow-y-auto">
+    <div class="flex flex-auto " style="flex-direction: column;">
+      <div class="flex flex-col flex-auto sm:mb-18 sm:overflow-y-auto">
         <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
           matSortActive="id" matSortDirection="asc" matSortDisableClear>
           <ng-container matColumnDef="circleId">
