service and model added

--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -55,7 +55,7 @@
           </mat-select>
         </mat-form-field>
       </div>
-     
+
 
       <div *ngIf="circle && isBM" class="col-md-2 kt-margin-bottom-10-mobile mr-20">
         <mat-form-field class="mat-form-field-fluid" appearance="outline">
@@ -163,14 +163,15 @@
         <div class="mat-table__message" *ngIf="!loading && dataSource.data.length==0">No records found</div>
         <div class="mat-table__message" *ngIf="loading">Please wait....</div>
 
-        <div class="mat-table__bottom">
-          <mat-spinner [diameter]="20" *ngIf="loading"></mat-spinner>
-          <mat-paginator [length]="15" [pageSize]="15" [pageSizeOptions]="[15,30, 50, 100]"
-            [showFirstLastButtons]="true"></mat-paginator>
+<!--        <div class="mat-table__bottom">-->
+<!--          <mat-spinner [diameter]="20" *ngIf="loading"></mat-spinner>-->
+<!--          <mat-paginator [length]="15" [pageSize]="15" [pageSizeOptions]="[15,30, 50, 100]"-->
+<!--            [showFirstLastButtons]="true"></mat-paginator>-->
 
-          <!--<mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
-  <mat-paginator [pageSize]="10" [pageSizeOptions]="[3, 5, 10]" [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>-->
-        </div>
+<!--          &lt;!&ndash;<mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>-->
+<!--  <mat-paginator [pageSize]="10" [pageSizeOptions]="[3, 5, 10]" [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>&ndash;&gt;-->
+<!--        </div>-->
+
 
       </div>
 
