--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -9,12 +9,12 @@
           class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b">
 
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-            <div class="col-lg-4 kt-margin-bottom-20-mobile">
+            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
-                <mat-form-field class="mat-form-field-fluid  mr-4" appearance="outline">
-                    <mat-label class="customMatLabel">MCO's Name<strong class="matMandatory">*</strong></mat-label>
-                    <input matInput placeholder="MCO's Name" formControlName="McoName" readonly="readonly" maxlength="30"
-                           autocomplete="off"/>
+                <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                    <mat-label class="customMatLabel">MCO's Name</mat-label>
+                    <input matInput placeholder="MCO's Name" formControlName="McoName" maxlength="30"
+                           autocomplete="off" readonly="readonly"/>
                 </mat-form-field>
             </div>
             <div class="col-lg-4 kt-margin-bottom-20-mobile">
@@ -26,14 +26,16 @@
                 </mat-form-field>
             </div>
 
-            </div>
+
             <div class="col-lg-4 kt-margin-bottom-20-mobile">
 
                 <mat-form-field class="mat-form-field-fluid  mr-4" appearance="outline">
                     <mat-label class="customMatLabel">Month<strong class="matMandatory">*</strong></mat-label>
-                    <input matInput placeholder="Month" formControlName="Month" readonly="readonly" maxlength="30" autocomplete="off" />
+                    <input matInput placeholder="Month" formControlName="Month" readonly="readonly" maxlength="30"
+                           autocomplete="off"/>
                 </mat-form-field>
             </div>
+        </div>
 
     </form>
 
@@ -243,8 +245,8 @@
         </table>
     </div>
 
-    <!-- <div class="form-group kt-form__group row mt-2 justify-content-center" *ngIf="onAdd">
-        <button mat-raised-button color="primary" (click)="submit()">Submit</button>
-      </div> -->
+<!--   <div class="form-group kt-form__group row mt-2 justify-content-center" *ngIf="onAdd">-->
+<!--        <button mat-raised-button color="primary" (click)="submit()">Submit</button>-->
+<!--      </div>-->
 
 </div>
