--- a/src/app/modules/reschedule-cases/make-rc/make-rc.component.html
+++ b/src/app/modules/reschedule-cases/make-rc/make-rc.component.html
@@ -9,7 +9,7 @@
 
             <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">
                 <mat-label class="customMatLabel">Zone</mat-label>
-                <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone">
+                <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone">
                     <mat-option [value]="SelectedZones?.ZoneId">
                         {{SelectedZones?.ZoneName}}
                     </mat-option>
@@ -18,7 +18,7 @@
 
             <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="!single_zone">
                 <mat-label class="customMatLabel">Zone</mat-label>
-                <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone"
+                <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone"
                             (selectionChange)="changeZone($event)">
                     <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
                                 [disabled]="disable_zone">
@@ -31,7 +31,7 @@
         <div>
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
                 <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
-                <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" [disabled]="disable_branch"
+                <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
                             *ngIf="!single_branch">
                     <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
                     >
@@ -39,13 +39,14 @@
                     </mat-option>
                 </mat-select>
 
-                <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" [disabled]="disable_branch"
+                <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
                             *ngIf="single_branch">
                     <mat-option [value]="SelectedBranches?.BranchCode"
                     >
                         {{SelectedBranches?.Name}}
                     </mat-option>
                 </mat-select>
+            </mat-form-field>
         </div>
         <div>
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
