--- a/src/app/modules/user-management/Role/create-edit-role/create-edit-role.component.html
+++ b/src/app/modules/user-management/Role/create-edit-role/create-edit-role.component.html
@@ -1,22 +1,22 @@
 <h2 mat-dialog-title>Create User Role</h2>
 <mat-dialog-content class="mat-typography">
 
-    <form  [formGroup]="createOrEditFrom" (ngSubmit)="onSubmit()" novalidate>
+    <form  [formGroup]="roleForm" (ngSubmit)="onSubmit()" novalidate>
         <div class="flex gt-xs:flex-row">
-            <mat-form-field  [ngClass]="formFieldHelpers"  class="flex-auto gt-xs:pr-3 mr-5">
+            <mat-form-field   class="flex-auto gt-xs:pr-3 mr-5">
                 <mat-label>Profile Name</mat-label>
                 <input matInput id="ProfileName"  placeholder="Role Code" formControlName="ProfileName" >
-                  <mat-error *ngIf="errorHandling('ProfileName', 'required')">
+                  <!-- <mat-error *ngIf="errorHandling('ProfileName', 'required')">
                     You Must Provide Role Code
-                 </mat-error>
+                 </mat-error> -->
                 
             </mat-form-field>
-            <mat-form-field [ngClass]="formFieldHelpers" class="flex-auto gt-xs:pl-3">
+            <mat-form-field  class="flex-auto gt-xs:pl-3">
                 <mat-label>Description</mat-label>
                 <input matInput id="ProfileDesc" placeholder="Role Name" formControlName="ProfileDesc">
-                <mat-error *ngIf="errorHandling('ProfileDesc', 'required')">
+                <!-- <mat-error *ngIf="errorHandling('ProfileDesc', 'required')">
                     You must provide Description
-                 </mat-error>
+                 </mat-error> -->
             </mat-form-field>
         </div>
         <div  class="col-lg-4 kt-margin-bottom-20-mobile">
@@ -39,13 +39,13 @@
      class=""
      mat-flat-button
      [color]="'primary'"
-     [disabled]="createOrEditFrom.disabled || !createOrEditFrom.valid"
+     [disabled]="viewLoading"
      (click)="onSubmit()">
-     <span *ngIf="!createOrEditFrom.disabled">
+     <span *ngIf="!roleForm.disabled">
         Save
      </span>
      <mat-progress-spinner
-         *ngIf="createOrEditFrom.disabled"
+         *ngIf="roleForm.disabled"
          [diameter]="24"
          [mode]="'indeterminate'"></mat-progress-spinner>
  </button>
