--- a/src/app/modules/user-management/users/circle-view-map/circle-view-map.component.html
+++ b/src/app/modules/user-management/users/circle-view-map/circle-view-map.component.html
@@ -1,53 +1,50 @@
 <div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 bg-card dark:bg-transparent">
 
-  <!-- Header -->
-  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b" 
-  >
-    <div class="text-4xl font-extrabold tracking-tight">View Map</div>
-    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4"  style="flex-wrap: wrap;
+    <!-- Header -->
+    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b"
+    >
+        <div class="text-4xl font-extrabold tracking-tight">View Map</div>
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4" style="flex-wrap: wrap;
     gap: 20px;">
-      <mat-form-field class="mat-form-field-fluid" appearance="outline" id="focus-removal">
-        <mat-label>Zone</mat-label>
-        <mat-select (selectionChange)="GetBranches($event)" [(ngModel)]="zoneInitial">
-          <mat-option *ngFor="let zone of Zones" [value]="zone.ZoneId">
-            {{zone.ZoneName }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
+            <mat-form-field class="mat-form-field-fluid" appearance="outline" id="focus-removal">
+                <mat-label>Zone</mat-label>
+                <mat-select (selectionChange)="GetBranches($event)" [(ngModel)]="zoneInitial">
+                    <mat-option *ngFor="let zone of Zones" [value]="zone.ZoneId">
+                        {{zone.ZoneName }}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
 
-      <mat-form-field class="mat-form-field-fluid" appearance="outline" id="focus-removal">
-        <mat-label>Branch</mat-label>
-        <mat-select (selectionChange)="loadCirclesSinglePoints($event)" [(ngModel)]="branchInitial">
-          <mat-option *ngFor="let branch of Branches" [value]="branch.BranchCode">
-            {{branch.Name }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
+            <mat-form-field class="mat-form-field-fluid" appearance="outline" id="focus-removal">
+                <mat-label>Branch</mat-label>
+                <mat-select (selectionChange)="loadCirclesSinglePoints($event)" [(ngModel)]="branchInitial">
+                    <mat-option *ngFor="let branch of Branches" [value]="branch.BranchCode">
+                        {{branch.Name }}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
     </div>
-  </div>
 
-  <!-- Main -->
+    <!-- Main -->
 
     <!-- Products list -->
-    <div style="padding: 2%;
-    border: 1px solid green;
-    height: 100%;">
-        <agm-map 
-         #gm [zoom]="zoom" [latitude]="lat" [longitude]="lng" [mapTypeControlOptions]="controlOptions"
-          [mapTypeControl]="true" (mapReady)="onMapReady($event)" [restriction]="countryRestriction" style="height: 500px !important;">
+    <agm-map style="width: 500px;height: 500px"
+             #gm [zoom]="zoom" [latitude]="lat" [longitude]="lng" [mapTypeControlOptions]="controlOptions"
+             [mapTypeControl]="true" (mapReady)="onMapReady($event)" [restriction]="countryRestriction"
+             style="height: 500px !important;">
 
-          <agm-marker *ngFor="let m of fenceMarkers; let i = index"
-            (markerClick)="gm.lastOpen?.close(); gm.lastOpen = infoWindow; clickedMarker(i, infowindow)"
-            [latitude]="m.lat" [longitude]="m.lng" [title]="m.BranchId">
+        <agm-marker *ngFor="let m of fenceMarkers; let i = index"
+                    (markerClick)="gm.lastOpen?.close(); gm.lastOpen = infoWindow; clickedMarker(i, infowindow)"
+                    [latitude]="m.lat" [longitude]="m.lng" [title]="m.BranchId">
 
             <agm-info-window #infowindow>
-              <strong>{{m.BranchId}}</strong>
+                <strong>{{m.BranchId}}</strong>
             </agm-info-window>
 
-          </agm-marker>
+        </agm-marker>
 
 
-        </agm-map>
-      </div>
+    </agm-map>
 
 </div>
