--- a/src/app/modules/reschedule-cases/search-rc/search-rc.component.html
+++ b/src/app/modules/reschedule-cases/search-rc/search-rc.component.html
@@ -1,1 +1,161 @@
-<p>search-rc works!</p>
+<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    <div class="text-4xl font-extrabold tracking-tight">Advance Search for Reschedule Cases</div>
+
+    <!-- Header -->
+    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b"
+         style="flex-wrap: wrap" [formGroup]="rcSearch">
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+
+            <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">
+                <mat-label class="customMatLabel">Zone</mat-label>
+                <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone">
+                    <mat-option [value]="SelectedZones?.ZoneId">
+                        {{SelectedZones?.ZoneName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="!single_zone">
+                <mat-label class="customMatLabel">Zone</mat-label>
+                <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone"
+                            (selectionChange)="changeZone($event)">
+                    <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
+                                [disabled]="disable_zone">
+                        {{zone?.ZoneName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+
+
+        </div>
+
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+
+            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
+                <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
+                            *ngIf="!single_branch">
+                    <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
+                    >
+                        {{branch?.Name}}
+                    </mat-option>
+                </mat-select>
+                <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
+                            *ngIf="single_branch">
+                    <mat-option [value]="SelectedBranches?.BranchCode"
+                    >
+                        {{SelectedBranches?.Name}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                <mat-label class="customMatLabel">Application Date(ddMMyyyy) <strong class="matMandatory">*</strong>
+                </mat-label>
+                <input readonly="readonly" matInput [matDatepicker]="picker3" formControlName="TrDate"
+                       [max]="today">
+                <mat-datepicker-toggle matSuffix [for]="picker3"></mat-datepicker-toggle>
+                <mat-datepicker #picker3></mat-datepicker>
+                <!--<mat-error *ngIf="hasError('AppDate', 'required')">Application Date <strong>required</strong></mat-error>-->
+            </mat-form-field>
+        </div>
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                <mat-label class="customMatLabel">Loan Case#</mat-label>
+                <input matInput placeholder="Enter Loan Case No" formControlName="Lcno" maxlength="10"
+                       autocomplete="off"/>
+            </mat-form-field>
+        </div>
+
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                <mat-label>Status</mat-label>
+                <mat-select formControlName="Status">
+                    <mat-option>
+                        <ngx-mat-select-search placeholderLabel="Search Loan Status..."
+                                               (focusout)="validateLoanStatusOnFocusOut()"
+                                               noEntriesFoundLabel="No Loan Status Found"
+                                               (keyup)="searchLoanStatus($event.target.value)">
+                        </ngx-mat-select-search>
+                    </mat-option>
+                    <mat-option *ngFor="let loanStatus of SelectedLoanStatus" [value]="loanStatus.Id">
+                        {{loanStatus.Name }}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+            <button mat-raised-button color="primary" (click)="find()">Find</button>
+        </div>
+
+    </div>
+    <div class="flex flex-auto" style="flex-direction: column;overflow-y: scroll">
+        <mat-table class="example-table-container"
+                   #table
+                   [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems}"
+                   matSort
+                   #sort1="matSort"
+                   matSortActive="id"
+                   matSortDirection="asc"
+                   matSortDisableClear>
+            <ng-container matColumnDef="Branch">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>Branch</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{row.branch}}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="TransactionDate">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>Transaction Date</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{row.transactionDate}}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="LoanApp">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>LOAN APP #</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{row.loanApp}}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="GlDescription">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>Gl description</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{row.glDescription}}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="Status">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{row.status}}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Scheme">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>Scheme</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{row.scheme}}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="OldDate">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>Old Due Date</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{row.oldDate}}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="AcStatus">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>A/C Status</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{row.acStatus}}</mat-cell>
+            </ng-container>
+
+            <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;"
+                            class="table-header-background"></mat-header-row>
+
+            <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+
+
+        </mat-table>
+    </div>
+    <div *ngIf="matTableLenght" class="mat-select" style="padding:5px;">
+        Items per page:
+        <mat-select display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
+                    style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
+            <mat-option [value]="5">5</mat-option>
+            <mat-option [value]="10">10</mat-option>
+            <mat-option [value]="25">25</mat-option>
+            <mat-option [value]="50">50</mat-option>
+        </mat-select>
+        <button (click)="paginate(1)">First</button>
+        <pagination-controls display="inline" (pageChange)="paginate($event)"
+                             style="display: inline-block;"></pagination-controls>
+        <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
+        <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
+    </div>
+
+</div>
