--- a/src/app/layout/layouts/vertical/classic/classic.component.html
+++ b/src/app/layout/layouts/vertical/classic/classic.component.html
@@ -42,7 +42,14 @@
             <!--            <search [appearance]="'bar'"></search>-->
             <!--            <shortcuts></shortcuts>-->
             <!--            <messages></messages>-->
+
+            <violations></violations>
+
+            <mapping-request></mapping-request>
+
             <notifications></notifications>
+
+
             <!--            <button-->
             <!--                class="lg:hidden"-->
             <!--                mat-icon-button-->
