styling enhancments Pending Transactions

--- a/src/@fuse/styles/overrides/angular-material.scss
+++ b/src/@fuse/styles/overrides/angular-material.scss
@@ -403,8 +403,12 @@
 /* ----------------------------------------------------------------------------------------------------- */
 /*  @ Dialog
 /* ----------------------------------------------------------------------------------------------------- */
+
+.cdk-overlay-pane{
 .mat-dialog-container {
     border-radius: 16px !important;
+    height: fit-content;
+}
 }
 
 /* ----------------------------------------------------------------------------------------------------- */
