--- a/src/app/modules/journal-voucher/search-jv-pending/search-jv-pending.component.html
+++ b/src/app/modules/journal-voucher/search-jv-pending/search-jv-pending.component.html
@@ -1,8 +1,8 @@
 <div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight">Pending Transactions</div>
+    <div class="text-4xl font-extrabold tracking-tight px-10 mt-4">Pending Transactions</div>
 
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b"
+    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4 px-6 md:px-8"
          style="flex-wrap: wrap" [formGroup]="pendingForm">
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
 
@@ -100,7 +100,7 @@
                 </mat-select>
             </mat-form-field>
         </div>
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+        <div class="flex flex-shrink-0 items-center sm:mt-0 sm:ml-4">
 
             <button mat-raised-button color="accent"
                     type="button" (click)="find()">
@@ -110,7 +110,7 @@
         </div>
 
     </div>
-    <div class="flex flex-auto overflow-hidden" style="flex-direction: column;">
+    <div class="flex flex-auto overflow-scroll mx-12" style="flex-direction: column;">
 
         <div class="example-table-container">
 
