--- a/src/app/modules/customer/check-eligibility/check-eligibility.component.html
+++ b/src/app/modules/customer/check-eligibility/check-eligibility.component.html
@@ -1,14 +1,11 @@
 
 
 
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-  <div class="text-4xl font-extrabold tracking-tight">{{getTitle()}}</div>
+<div class="sm:absolute sm:inset-0 flex flex-col px-10  flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+  <div class="text-4xl font-extrabold tracking-tight mt-4">{{getTitle()}}</div>
 
   <!-- Header -->
-  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b"
-    style="flex-wrap: wrap">
-  </div>
-  <div class="flex flex-auto overflow-hidden" style="flex-direction: column;">
+  <div class="flex flex-auto overflow-hidden mt-10" style="flex-direction: column;">
     <form [formGroup]="customerInfo" class="kt-form kt-form--group-seperator-dashed">
       <div class="kt-form">
         <div class="kt-portlet__body">
@@ -21,9 +18,6 @@
           <!--Get Customer Info-->
           <div [style.height]="gridHeight" *ngIf="NDCActionPerformSuccess">
             <div class="form-group kt-form__group row">
-              <div class="col-lg-3 kt-margin-bottom-20-mobile">
-  
-              </div>
               <div class="col-lg-4 kt-margin-bottom-20-mobile">
                 <mat-form-field class="mat-form-field-fluid" appearance="outline">
                   <input matInput placeholder="Enter cnic" formControlName="Cnic" maxlength="15" autocomplete="off" [mask]="maskEnums.cnic" [readonly]="checkEligibiltyCnic"/>
@@ -31,12 +25,12 @@
                   <mat-error *ngIf="hasError('Cnic', 'pattern')"><strong>Cnic lenght invalid</strong></mat-error>
                   <mat-hint align="left">Please enter cnic <strong>(3210412345678)</strong></mat-hint>
                 </mat-form-field>
-              </div>
-              <div class="col-lg-4 kt-margin-bottom-20-mobile">
-                <button color="primary" type="button" (click)="getCustomerInfo()" class="btn btn-secondary mt-1" [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}">
+                <button color="primary" type="button" (click)="getCustomerInfo()" class=" mx-5 btn btn-secondary mt-1" [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}">
                   <span><i class="fa fa-check"> &nbsp;</i> Check Eligibility</span>
                 </button>
               </div>
+
+
             </div>
             <div class="form-group kt-form__group row" *ngIf="NDCPerform">
               <div class="col-lg-3 kt-margin-bottom-20-mobile">
