--- a/src/app/modules/customer/customer-list/customer-list.component.html
+++ b/src/app/modules/customer/customer-list/customer-list.component.html
@@ -1,8 +1,8 @@
 <div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-  <div class="text-4xl font-extrabold tracking-tight">Customer List</div>
+  <div class="text-4xl font-extrabold tracking-tight px-8 mt-4">Customer List</div>
 
   <!-- Header -->
-  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b"
+  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between px-6 md:px-8"
     style="flex-wrap: wrap" [formGroup]="customerSearch">
 
     <div class="col-md-2 kt-margin-bottom-10-mobile" *ngIf="!isUserAdmin">
@@ -80,7 +80,7 @@
         <!--   <mat-error *ngIf="hasError('FatherName', 'required')">FatherName<strong>required</strong></mat-error>-->
       </mat-form-field>
     </div>
-    <div *ngIf="CustomerStatusLov" class="col-md-2 kt-margin-bottom-10-mobile">
+    <div *ngIf="CustomerStatusLov" class="col-md-2 kt-margin-bottom-10-mobile mt-10">
 
       <mat-form-field class="mat-form-field-fluid" appearance="outline">
         <mat-label>Select Customer Status</mat-label>
@@ -105,7 +105,7 @@
     </div>
 
   </div>
-  <div class="flex flex-auto overflow-hidden" style="flex-direction: column;">
+  <div class="flex flex-auto overflow-scroll mx-12" style="flex-direction: column;">
 
     <div class="example-table-container">
 
